Added many parameters to satisfy Java 17