@@ -33,6 +33,23 @@ VOLUME /usr/lib/unifi/data
 
 WORKDIR /usr/lib/unifi
 
-ENTRYPOINT ["java", "-Xmx512M", "-jar", "/usr/lib/unifi/lib/ace.jar"]
+ENTRYPOINT ["java", \
+    "-Dfile.encoding=UTF-8", \
+    "-Djava.awt.headless=true", \
+    "-Dapple.awt.UIElement=true", \
+    "-Dunifi.core.enabled=false", \
+    "-Dunifi.mongodb.service.enabled=false", \
+    "-Xmx1024M", \
+    "-XX:+UseParallelGC", \
+    "-XX:+ExitOnOutOfMemoryError", \
+    "-XX:+CrashOnOutOfMemoryError", \
+    "-Xlog:gc:logs/gc.log:time:filecount=2,filesize=5M", \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.time=ALL-UNNAMED", \
+    "--add-opens", "java.base/sun.security.util=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.io=ALL-UNNAMED", \
+    "--add-opens", "java.rmi/sun.rmi.transport=ALL-UNNAMED", \
+    "-jar", "/usr/lib/unifi/lib/ace.jar"]
+# ENTRYPOINT ["/bin/bash"]
 CMD ["start"]
 
